--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <div class="container">
         <h1>Rock Paper Scissors Game</h1>
 
+        <div class="login">
+            <button onclick="login()">Login</button>
+        </div>
+        
+        <div class="logout">
+            <button onclick="logout()">Logout</button>
+        </div>
+
         <div class="choices">
             <button onclick="makeChoice('rock')">Rock</button>
             <button onclick="makeChoice('paper')">Paper</button>
